plugins {
    id("java-library")
}

final String VERSION = "1.21.8"
final String RUN_NUMBER = System.getenv("GITHUB_RUN_NUMBER") ?: "DEV"

group = "cloud.grabsky"
version = "$VERSION-$RUN_NUMBER"

subprojects {
    apply(plugin: "java-library")

    group = rootProject.group
    version = rootProject.version

    ext {
        BEDROCK_VERSION = "1.21-67"
        KYORI_NBT_VERSION = "4.23.0"
    }

    repositories {
        mavenLocal()
        mavenCentral()
        // Repository for the Paper API.
        maven { url = "https://repo.papermc.io/repository/maven-public/" }
        // Repository containing all my libraries.
        maven { url = "https://vela.grabsky.workers.dev/releases/" }
    }

    dependencies {
        compileOnly("org.jetbrains:annotations:24.0.1")
        // Lombok
        compileOnly("org.projectlombok:lombok:1.18.36")
        annotationProcessor("org.projectlombok:lombok:1.18.36")
        // Paper API
        compileOnly("io.papermc.paper:paper-api:1.21.8-R0.1-SNAPSHOT")
    }

    compileJava {
        options.fork = true
        options.compilerArgs += "--enable-preview"
        // Setting compatibility to Java 21 and above.
        sourceCompatibility = JavaVersion.VERSION_21
        targetCompatibility = JavaVersion.VERSION_21
    }

    java {
        withSourcesJar()
        withJavadocJar()
    }

}

// Returns formatted release name. (for GitHub Actions)
tasks.register("getRelease", () -> print("$VERSION #$RUN_NUMBER"))

// Returns formatted tag name. (for GitHub Actions)
tasks.register("getTag", () -> print("$VERSION+$RUN_NUMBER"))
